# GlueMasters

./: README.MD  entrypoint.sh  start_gluemaster.sh
gluemaster_files/: CalibrationData.csv  camparam.csv  connections.csv  rulerdata.npz
gluemaster_files/CSVMethods/: blackpcb.csv  blackplane.csv  orangepla.csv  whiteboard.csv  whiteplane.csv  wihteboard.csv
src/gluemaster/: package.xml  setup.cfg  setup.py
src/gluemaster/gluemaster/: GlueMasterMachine_Node.py  Rec_Node.py
src/gluemaster/gluemaster/headfiles/: Camsys.py  Driver_Con_FunsPULSE.py  GlueMasterMachine_Con.py  Match_template_VIII.py  mainwindow.py  mv_set.py  painter_set.py  parameter_reset.py  point_reset.py  product_name.py
src/gluemaster/gluemaster/launch/: gluemaster.launch.py
src/gm_interfaces/: CMakeLists.txt  package.xml
src/gm_interfaces/srv/: Str2Str.srv
